2007-07-12 Olivier Thauvin <nanardon@mandriva.org>
    * use lzma by default for man and info pages

2007-06-30 Guillaume Rousse <guillomovitch@mandriva.org> 0.26.1
	* rename ChangeLog to NEWS
	* rename Howto-spec-helper to README
	* drop deprecated spec-helper script
	* make sure fix-eol keep original file permission

2007-06-24 Anssi Hannula <anssi@mandriva.org> 0.26
	* fix fix-eol to not corrupt files it tries to convert

2007-06-15 Guillaume Rousse <guillomovitch@mandriva.org> 0.25
	* switch to a manual Changelog
	* new helper script: fix-eol
	* gprintify should not deal with daemon argument (fix #22066)