@@ -1,12 +1,10 @@
 # $Id$
 
-%_extension            .lzma
-
 %_spec_helper_dir @pkgdatadir@
 
 %__spec_helper_post \
     %{?!dont_clean_files:    [ -n "$DONT_CLEANUP" ]       || %_spec_helper_dir/clean_files} \
-    %{?!dont_compress:       [ -n "$DONT_COMPRESS" ]      || %_spec_helper_dir/compress_files} \
+    %{?!dont_compress:       [ -n "$DONT_COMPRESS" ]      || %_spec_helper_dir/compress_files %{?_extension}%{?!_extension:.gz}} \
     %{?!dont_strip:          [ -n "$DONT_STRIP" ]         || %_spec_helper_dir/strip_files} \
     %{?!dont_relink:         [ -n "$DONT_RELINK" ]        || %_spec_helper_dir/relink_symlinks} \
     %{?!dont_cleanup_perl:   [ -n "$DONT_CLEAN_PERL" ]    || %_spec_helper_dir/clean_perl} \
