@@ -1,5 +1,9 @@
-2007-07-12 Olivier Thauvin <nanardon@mandriva.org>
-    * use lzma by default for man and info pages
+2007-08-04 Guillaume Rousse <guillomovitch@mandriva.org> 0.27.1
+	* pass compression format as argument to compress_files
+	  (make spec-helper backportable again)
+
+2007-07-12 Olivier Thauvin <nanardon@mandriva.org> 0.27
+	* use lzma by default for man and info pages
 
 2007-06-30 Guillaume Rousse <guillomovitch@mandriva.org> 0.26.1
 	* rename ChangeLog to NEWS
